--- a/style.css
+++ b/style.css
@@ -61,7 +61,10 @@
 }
 
 .main {
-    height: 80vh;
-    background-color: rgba(0, 0, 0, 0.030);
+    margin-block: 8vh;
+    background-color: #F5F4F8;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
 }
 
