--- a/card-style.css
+++ b/card-style.css
@@ -1,58 +1,67 @@
 body {
-    font-family: 'Inter', sans-serif;
-    background-color: #F5F4F8;
+  font-family: "Inter", sans-serif;
+  background-color: #f5f4f8;
 }
 
 .single-card:hover {
-    transform: scale(1.02);
+  transform: scale(1.02);
 }
 
 .dimensions {
-    width: 30px;
+  width: 30px;
 }
 
 .stars-color {
-    color: #FFAA46;
+  color: #ffaa46;
 }
 
 .bars-color {
-    color: #7550FE;
+  color: #7550fe;
 }
 
 .save {
-    color: rgba(0, 0, 0, 0.250);
+  color: rgba(0, 0, 0, 0.25);
 }
 
 .save:hover {
-    color: #7550FE;
+  color: #7550fe;
 }
 
 .carousel-prev-button {
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    border: 1px #dee2e6 solid;
-    background-color: white;
-    position: absolute;
-    top: 41%;
-    left: -70px;
-    color: rgba(0, 0, 0, 0.350);
-    font-size: x-large;
-    padding-top: 8px;
-    padding-right: 4px;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  border: 1px #dee2e6 solid;
+  background-color: white;
+  position: absolute;
+  top: 41%;
+  left: -70px;
+  color: rgba(0, 0, 0, 0.35);
+  font-size: x-large;
+  padding-top: 8px;
+  padding-right: 4px;
 }
 
 .carousel-next-button {
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    border: 1px #dee2e6 solid;
-    background-color: white;
-    position: absolute;
-    top: 41%;
-    right: -70px;
-    color: rgba(0, 0, 0, 0.350);
-    font-size: x-large;
-    padding-top: 8px;
-    padding-left: 4px;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  border: 1px #dee2e6 solid;
+  background-color: white;
+  position: absolute;
+  top: 41%;
+  right: -70px;
+  color: rgba(0, 0, 0, 0.35);
+  font-size: x-large;
+  padding-top: 8px;
+  padding-left: 4px;
+}
+
+@media screen and (max-width: 1400px) {
+  .carousel-prev-button {
+    left: 6px;
+  }
+  .carousel-next-button {
+    right: 6px;
+  }
 }
